Переделаны методы для реализации пагинации, добавлена логика пагинации в контроллере
добавлено нижнее меню для навигации по страницам

при необходимости можно вручную изменить количество картинок на странице посредством изменения значений в адресной строке браузера